// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddEditCreditCard component should renders correctly 1`] = `
<Fragment>
  <Styled(BodyCopy)
    className="elem-mb-LRG"
    color="text.primary"
    component="p"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    <Styled(Anchor)
      anchorVariation="secondary"
      asPath="/account/payment"
      dataLocator="payment-backlink"
      fontSizeVariation="xlarge"
      to="/account?id=payment"
    >
      <span
        className="left-arrow"
      >
         
      </span>
      lbl_common_backLink
    </Styled(Anchor)>
  </Styled(BodyCopy)>
  <Styled(FormPageHeading)
    data-locator="payment-addcreditordebitcardheader"
    heading="lbl_payment_addCCHeading"
  />
  <ReduxForm
    destroyOnUnmount={true}
    enableReinitialize={true}
    forceUnregisterOnUnmount={false}
    form="addEditCreditCard"
    getFormState={[Function]}
    initialValues={Object {}}
    isEdit={false}
    keepDirtyOnReinitialize={false}
    labels={
      Object {
        "common": Object {},
        "paymentGC": Object {},
      }
    }
    persistentSubmitErrors={false}
    pure={true}
    shouldAsyncValidate={[Function]}
    shouldError={[Function]}
    shouldValidate={[Function]}
    shouldWarn={[Function]}
    submitAsSideEffect={false}
    touchOnBlur={true}
    touchOnChange={false}
    updateUnregisteredFields={false}
    validate={[Function]}
  />
</Fragment>
`;

exports[`AddEditCreditCard component should renders correctly with error message 1`] = `
<Fragment>
  <Styled(BodyCopy)
    className="elem-mb-LRG"
    color="text.primary"
    component="p"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    <Styled(Anchor)
      anchorVariation="secondary"
      asPath="/account/payment"
      dataLocator="payment-backlink"
      fontSizeVariation="xlarge"
      to="/account?id=payment"
    >
      <span
        className="left-arrow"
      >
         
      </span>
      lbl_common_backLink
    </Styled(Anchor)>
  </Styled(BodyCopy)>
  <Styled(FormPageHeading)
    data-locator="payment-addcreditordebitcardheader"
    heading="lbl_payment_editCCHeading"
  />
  <ReduxForm
    destroyOnUnmount={true}
    enableReinitialize={true}
    forceUnregisterOnUnmount={false}
    form="addEditCreditCard"
    getFormState={[Function]}
    initialValues={Object {}}
    isEdit={true}
    keepDirtyOnReinitialize={false}
    labels={
      Object {
        "common": Object {},
        "paymentGC": Object {},
      }
    }
    persistentSubmitErrors={false}
    pure={true}
    shouldAsyncValidate={[Function]}
    shouldError={[Function]}
    shouldValidate={[Function]}
    shouldWarn={[Function]}
    submitAsSideEffect={false}
    touchOnBlur={true}
    touchOnChange={false}
    updateUnregisteredFields={false}
    validate={[Function]}
  />
</Fragment>
`;
